# junior

./: Cargo.toml  junior.md
jr-compiler-haskell/: .hai.rs.icloud  .newsyntax.jr.icloud  .test.jr.icloud  .test.jr.rs.icloud  Makefile  TODO  hai.rs  newsyntax.jr  test.jr
jr-compiler-haskell/dir-traverse/: DirTrav.hs
jr-compiler-haskell/pkg/: .Analyse.hi.icloud  .Analyse.o.icloud  .Ast.hi.icloud  .Ast.o.icloud  .Lex.hi.icloud  .Lex.o.icloud  .Main.hi.icloud  .Main.o.icloud  .Parse.hi.icloud  .Parse.o.icloud  .Utils.hi.icloud  .Utils.o.icloud  .Write.hi.icloud  .Write.o.icloud  Analyse.hi  Ast.hi  Lex.hi  Main.hi  Parse.hi  Utils.hi  Write.hi
jr-compiler-haskell/src/: Analyse.hs  Ast.hs  Lex.hs  Main.hs  Parse.hs  Utils.hs  Write.hs
jr-compiler-haskell/test/: .bmod.jr.icloud  .ppp.amod.jr.icloud  .ppp.pcmod.jr.icloud  bmod.jr  ppp.amod.jr  ppp.pcmod.jr
jr-compiler-haskell/test/down/: down.hai.jr
jr-compiler-rs/: Cargo.toml  jr.jr  kut.jr
jr-compiler-rs/src/: ast.rs  lex.rs  lib.rs  meta.rs  tks.rs
jr-compiler-rs/src/analyse/: mod.rs  walk.rs
jr-compiler-rs/src/parse/: expr.rs  mod.rs  modifier.rs  pattern.rs  stmt.rs  typ.rs
jr-lib/: .Cargo.lock.icloud  .Cargo.toml.icloud  .build.rs.icloud  .show.jr.icloud  Cargo.toml  build.rs  show.jr
jr-lib/src/: .hooks.rs.icloud  .lib.rs.icloud  lib.rs
jr-lib/src/rf/: mod.rs  proxy.rs  proxy1.rs  reference.rs  value.rs  var.rs
jr-lib/testlib/: .Cargo.lock.icloud  .Cargo.toml.icloud  Cargo.toml
jr-lib/testlib/src/: main.rs
preprocessor/: Cargo.toml
preprocessor/src/: ast.rs  lexer.rs  main.rs  parser.rs
(+10 files in other folders)
