[package]
name = "jr-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[build-dependencies]
syn = { version = "1.0.80", features = ["extra-traits","full","parsing","visit","visit-mut"] }
inwelling = "0.3.0"
